Fixed name spacing issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,5 @@
 /*https://color.adobe.com/Theme-3-color-theme-6075720/edit/?copy=true&base=2&rule=Custom&selected=2&name=Copy%20of%20Theme%203&mode=rgb&rgbvalues=0.0784313753247261,0.2000000029802322,0.4509803950786591,0.05882352963089943,0.1568627506494522,0.3490196168422699,0.20057142090979924,0.2265714180870926,0.26,0.6666666865348816,0.7098039388656616,0.7490196228027344,0.9215686321258545,0.9411764740943909,0.9490196108818054&swatchOrder=0,1,2,3,4*/
 html, body {
-    max-width: 100%;
     overflow-x: hidden;
 }
 
@@ -86,25 +85,30 @@ b {
 	color: white;
 }
 
+#headerList {
+  position: absolute;
+  left: 50%;
+  top: 25%;
+  transform: translatex(-50%);
+	list-style-type: none;
+}
+
 #bigName {
 	color: black;
-	font-size: 10em;
-	position: relative;
-	vertical-align: middle;
-	top: 25%;
+	font-size: 150px;
 	text-align: center;
 	font-family: 'Fredericka the Great', cursive;
 }
 
 #buttonList {
 	list-style-type: none;
-	margin-top: 10em;
-	margin-left: 25%;
+  position: relative;
+	vertical-align: middle;
 }
 
 .sec1Buttons {
-	height: 6em;
-	margin-right: 5em;
+	height: 75px;
+	margin-right: 50px;
 	display: inline;
 }
 
@@ -277,13 +281,13 @@ b {
 }
 
 .nav-tabs > li > a:hover{
-    background-color: rgba(41,48,56,1); 
-    color: #4B93FF; 
+    background-color: rgba(41,48,56,1);
+    color: #4B93FF;
 }
 
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus{
-    background-color: rgba(51,58,66,1); 
-    color: #4B93FF; 
+    background-color: rgba(51,58,66,1);
+    color: #4B93FF;
 }
